--- a/TipTap/Module/Home/Setting/TTSettingCell.xib
+++ b/TipTap/Module/Home/Setting/TTSettingCell.xib
@@ -17,21 +17,21 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="TTSettingCell" customModule="TipTap" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="45" id="KGk-i7-Jjw" customClass="TTSettingCell" customModule="TipTap" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="549" height="45"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="549" height="44.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DhX-MK-nfR">
-                        <rect key="frame" x="28" y="14" width="34" height="16"/>
+                        <rect key="frame" x="28" y="14.5" width="34" height="16"/>
                         <fontDescription key="fontDescription" name="KoPubDotumPL" family="KoPubDotum_Pro" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qcO-2j-cbU">
-                        <rect key="frame" x="244" y="6.5" width="51" height="31"/>
+                        <rect key="frame" x="473" y="7" width="51" height="31"/>
                         <color key="onTintColor" red="0.47843137250000001" green="0.7843137255" blue="0.73725490199999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <connections>
                             <action selector="pressedSwitch:" destination="KGk-i7-Jjw" eventType="valueChanged" id="FdC-yD-nv9"/>
@@ -50,6 +50,7 @@
                 <outlet property="switchButton" destination="qcO-2j-cbU" id="vpe-0r-vXK"/>
                 <outlet property="titleLabel" destination="DhX-MK-nfR" id="GuE-td-rKg"/>
             </connections>
+            <point key="canvasLocation" x="474.39999999999998" y="192.05397301349328"/>
         </tableViewCell>
     </objects>
 </document>
